# rthinfo

./: .gitignore  README.md  pyproject.toml
rthinfo/: __main__.py  rthinfo.py
tests/: test_rthinfo.py
