[tool.poetry]
name = "rthinfo"
version = "0.1.0"
description = "Fetch and show data from rth.info"
authors = ["Michael John <michael.john@gmx.at>"]
license = "GPL"

[tool.poetry.scripts]
rthinfo = 'rthinfo.__main__:main'

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
prettytable = "^3.2.0"
argparse = "^1.4.0"
python-time = "^0.3.0"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
homepage = "https://github.com/amstelchen/rthinfo"
repository = "https://github.com/amstelchen/rthinfo"
documentation = "https://github.com/amstelchen/rthinfo"
